--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header-image {
+    background-image: url(/public/image/Header.jpg);
+    width: 100%;
+    height: 100%;
+}
+
+.background-image {
+    background-image: url(/public/image/background.jpg);
+    width: 100%;
+    height: 100%;
+}
